chore: common pom update