@@ -16,6 +16,14 @@
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>local-vector-api</id>
+            <url>file://${user.home}/.m2/repository</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>false</enabled></snapshots>
+        </repository>
+    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -44,7 +52,6 @@
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                         <arg>-J--enable-native-access=ALL-UNNAMED</arg>
-                        <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--enable-preview</arg>
                         <arg>-proc:full</arg>
                         <arg>-parameters</arg>
@@ -61,6 +68,12 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>com.chua.jdk</groupId>
+            <artifactId>vector-api</artifactId>
+            <version>4.0.0.42</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
